// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateShadowNodeCpp can generate for 'ArrayPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char ArrayPropsNativeComponentViewComponentName[] = \\"ArrayPropsNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'BooleanPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char BooleanPropNativeComponentViewComponentName[] = \\"BooleanPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'ColorPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char ColorPropNativeComponentViewComponentName[] = \\"ColorPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'DimensionPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char DimensionPropNativeComponentViewComponentName[] = \\"DimensionPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EdgeInsetsPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char EdgeInsetsPropNativeComponentViewComponentName[] = \\"EdgeInsetsPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EnumPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char EnumPropNativeComponentViewComponentName[] = \\"EnumPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EventNestedObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char EventNestedObjectPropsNativeComponentViewComponentName[] = \\"EventNestedObjectPropsNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'EventPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char EventPropsNativeComponentViewComponentName[] = \\"EventPropsNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'FloatPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char FloatPropsNativeComponentViewComponentName[] = \\"FloatPropsNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'ImagePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char ImagePropNativeComponentViewComponentName[] = \\"ImagePropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'IntegerPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char IntegerPropNativeComponentViewComponentName[] = \\"IntegerPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'InterfaceOnlyNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {



} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'MixedPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char MixedPropNativeComponentViewComponentName[] = \\"MixedPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'MultiNativePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char MultiNativePropNativeComponentViewComponentName[] = \\"MultiNativePropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'NoPropsNoEventsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char NoPropsNoEventsNativeComponentViewComponentName[] = \\"NoPropsNoEventsNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'ObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char ObjectPropsNativeComponentComponentName[] = \\"ObjectPropsNativeComponent\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'PointPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char PointPropNativeComponentViewComponentName[] = \\"PointPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;

exports[`GenerateShadowNodeCpp can generate for 'StringPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "ShadowNodes.cpp": "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateShadowNodeCpp.js
 */

#include <react/renderer/components/RNCodegenModuleFixtures/ShadowNodes.h>

namespace facebook::react {

extern const char StringPropNativeComponentViewComponentName[] = \\"StringPropNativeComponentView\\";

} // namespace facebook::react
",
}
`;
